# EsenzIA-IAE-US

./: .gitignore  Memoria.Rmd  README.md  pyproject.toml  requirements.txt
app/: main.py
data/: INCIDENCIA PÉRDIDA PEDIDOS 2a3788364f8480bfb49ff6b3776b9b30.csv  INCIDENCIAS 19b788364f84804ba43bfc058366a595.csv  INCIDENCIAS TARAS PROVEEDORES 2a3788364f84808ebdb3d6173787f9cc.csv  PAQUETES DUPLICADOS BIGBLUE 2bb788364f84806388edcae76dc25bdf.csv  correos_recientes.csv  dataset_enriquecido.csv  dataset_maestro.csv  dataset_maestro_limpio.csv  dataset_nlp.csv  tabla_incidencias.csv
docs/: caso_practico_tfg.md
modelos/: clasificador_nltk.pkl  comparativa_modelos.pkl
src/: analisis_sentimiento.py  anonimizar_datos.py  api_connection.py  entrenamiento_avanzado.py  extraccion_clasificacion.py  extraccion_clasificacion_v1.py  extraer_zoho.py  get_token.py  orchestration.py  tokenizar.py  unificar_datos.py  unificar_pipeline.py  zoho_api.py
