[project]
name = "trabajo-final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dagster>=1.13.0",
    "dagster-webserver>=1.13.0",
    "gensim>=4.4.0",
    "keras>=3.13.2",
    "matplotlib>=3.10.8",
    "nltk>=3.9.4",
    "numpy>=2.4.3",
    "pandas>=2.3.3",
    "plotly>=6.7.0",
    "plotnine>=0.15.3",
    "pysentimiento>=0.7.3",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.55.0",
    "tensorflow>=2.21.0",
]
